Update Steckbrief - Aufgabe 1

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/Aufgabe%201%20-%20Seite%201-3.pdf">Aufgabe 1 - PDF</a>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/">Aufgabe 1 - Code</a>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
