--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,8 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/Aufgabe%201%20-%20Seite%201-3.pdf">Aufgabe 1 - PDF</a>
-	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/">Aufgabe 1 - Code</a>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/Aufgabe%201%20-%20Seite%201-3.pdf" target="_blank">Aufgabe 1 - PDF, 25.04.2020</a></br>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/" target="_blank">Aufgabe 1 - PDF, 25.04.2020</a></br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
