Update Steckbrief - Aufgabe 1 - Verbesserung

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,7 @@ body {
 </head>
 <body>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/Aufgabe%201%20-%20Seite%201-3.pdf" target="_blank">Aufgabe 1 - PDF, 25.04.2020</a></br>
-	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/" target="_blank">Aufgabe 1 - PDF, 25.04.2020</a></br>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/" target="_blank">Aufgabe 1 - Code, 25.04.2020</a></br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
