Aufgabe 2 - Verlinkung zum Steckbrief

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%202/Aufgabe%202%20-%20Seite%201-3.pdf" target="_blank">Aufgabe 2 - PDF, 02.05.2020</a></br>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%202/index.html" target="_blank">Aufgabe 2 - Code, 02.05.2020</a></br>
 	<a href="https://github.com/jacqueline-mossig/EIA2-SoSe20" target="_blank">Mein Repository</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/Aufgabe%201%20-%20Seite%201-3.pdf" target="_blank">Aufgabe 1 - PDF, 25.04.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%201/" target="_blank">Aufgabe 1 - Code, 25.04.2020</a></br>
