--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%206/Indigents/Aufgabe%206%20-%20Seite%201-7.pdf" target="_blank">Aufgabe 6 - PDF, 30.05.2020</a></br>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%206/Indigents/Client/HelpForIndigents.html" target="_blank">Aufgabe 6 - Code, 30.05.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%205/Aufgabe%205%20-%20Seite%201-6.pdf" target="_blank">Aufgabe 5 - PDF, 23.05.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%205/Help%20for%20indigents.html" target="_blank">Aufgabe 5 - Code, 23.05.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%204/Aufgabe%204%20-%20Seite%201-5.pdf" target="_blank">Aufgabe 4 - PDF, 16.05.2020</a></br>
