--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,7 @@ body {
 </style>
 </head>
 <body>
+	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe9/Aufgabe/Aufgabe9-Seite1-3.pdf" target="_blank">Aufgabe 9 - (diesmal nur) PDF, 20.06.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%208/Aufgabe/Aufgabe8-Seite1-2.pdf" target="_blank">Aufgabe 8 - (diesmal nur) PDF, 13.06.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%207/Indigents/Aufgabe%207%20-%20Seite%201-7.pdf" target="_blank">Aufgabe 7 - (diesmal nur) PDF, 06.06.2020</a></br>
 	<a href="https://jacqueline-mossig.github.io/EIA2-SoSe20/Aufgaben/Aufgabe%206/Indigents/Aufgabe%206%20-%20Seite%201-7.pdf" target="_blank">Aufgabe 6 - PDF, 30.05.2020</a></br>
